--- a/.gitignore
+++ b/.gitignore
@@ -86,5 +86,4 @@ fastlane/test_output
 #
 # After new code Injection tools there's a generated folder /iOSInjectionProject
 # https://github.com/johnno1962/injectionforxcode
-
-iOSInjectionProject/
+releases/
