--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,4 @@ fastlane/test_output
 # After new code Injection tools there's a generated folder /iOSInjectionProject
 # https://github.com/johnno1962/injectionforxcode
 releases/
+.vscode
